--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">DataReport2</string>
+    <string name="settings">设置</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings" translatable="false">Settings</string>
